--- a/src/app/components/cadastro/cadastro.component.html
+++ b/src/app/components/cadastro/cadastro.component.html
@@ -1,11 +1,18 @@
 <section>
-    <h1>Cadastro</h1>
-    <p>Já tem conta? <a href="">Fazer login </a></p>
     <div class="container">
+        <div class="logo">
+            <img src="imgs/Logo.png" alt="">
+        </div>
+        <h1>Cadastro</h1>
+        <p>Já tem conta? <a href="">Fazer login </a></p>
         <form (ngSubmit)="Cadastrar()">
+            <label for="nome">Nome:</label>
             <input type="text" [(ngModel)]="usuario.nome" name="nome">
+            <label for="Email">Email:</label>
             <input type="email" [(ngModel)]="usuario.email" name="email">
+            <label for="Senha">Senha:</label>
             <input type="password" [(ngModel)]="usuario.senha" name="senha">
+            <label for="passwordConfirm">Confirmar senha:</label>
             <input type="password" [(ngModel)]="passwordConfirm" name="passwordConfirm">
             <button type="submit">Cadastrar</button>
         </form>
