--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,11 +1,17 @@
 
 <section>
-    <h1>Cadastro</h1>
-    <p>Ainda não tem uma conta? <a href="">Cadastre-se</a></p>
     <div class="container">
+        <div class="logo">
+            <img src="imgs/Logo.png" alt="">
+        </div>
+        <h1>Login</h1>
+        <p>Ainda não tem uma conta? <a href="">Cadastre-se</a></p>
         <form (ngSubmit)="logar()">
+            <label for="email">email: </label>
             <input type="email" [(ngModel)]="login.email" name="email">
+            <label for="senha">senha: </label>
             <input type="password" [(ngModel)]="login.senha" name="senha">
+            <a href="">Esqueceu a senha?</a>
             <button type="submit">Entrar</button>
         </form>
     </div>
