--- a/src/app/components/index/index.component.html
+++ b/src/app/components/index/index.component.html
@@ -1,1 +1,26 @@
-<p>index works!</p>
+
+<section>
+    <header>
+        <div class="container">
+            <div class="logo">
+                <img src="imgs/Logo-notext.png" alt="">
+            </div>
+            <div>
+                perfil
+            </div>
+        </div>
+        <div class="text">
+            Ola, Breno <br>
+            <h1>Bem vindo de Volta</h1>
+        </div>
+    </header>
+
+    <app-decks />
+
+
+
+    <app-menu />
+</section>
+
+
+
