--- a/src/app/components/cadastro/cadastro.component.scss
+++ b/src/app/components/cadastro/cadastro.component.scss
@@ -12,12 +12,13 @@ section {
     justify-content: center;
     text-align: start;
 
-    padding: 70px 20px;
+    padding: 70px 50px;
 
 
     .container {
         min-height: 100vh;
         width: 100%;
+        
        
         display: flex;
         flex-direction: column;
@@ -64,7 +65,8 @@ section {
             }
 
             input {
-                height: 45px;
+                height: 25px;
+                padding: 10px;
                 border-radius: 30px;
                 margin-bottom: 12px;
 
