--- a/src/app/components/index/menu/menu.component.html
+++ b/src/app/components/index/menu/menu.component.html
@@ -1,5 +1,10 @@
 <section>
     <div class="container">
-        menu card item1 item2
+        <ul>
+            <li>teste</li>
+            <li>teste</li>
+            <li>teste</li>
+            <li>teste</li>
+        </ul>
     </div>
 </section>
