--- a/src/app/components/index/index.component.html
+++ b/src/app/components/index/index.component.html
@@ -6,7 +6,7 @@
                 <img src="imgs/Logo-notext.png" alt="">
             </div>
             <div>
-                perfil
+                <i class="bi bi-person-circle"></i>
             </div>
         </div>
         <div class="text">
@@ -14,8 +14,11 @@
             <h1>Bem vindo de Volta</h1>
         </div>
     </header>
-
-    <app-decks />
+    <div class="decks">
+        
+        <h3>Meus decks: </h3>
+        <app-decks />
+    </div>
 
 
 
