--- a/src/app/components/index/menu/menu.component.html
+++ b/src/app/components/index/menu/menu.component.html
@@ -1,10 +1,11 @@
 <section>
-    <div class="container">
+   <div class="bottom-nav">
         <ul>
-            <li>teste</li>
-            <li>teste</li>
-            <li>teste</li>
-            <li>teste</li>
+            <li><i class="bi bi-house-fill"></i></li>
+            <li><i class="bi bi-folder-fill"></i></li>
+            <button class="center-btn"><i class="bi bi-plus-lg"></i></button>
+            <li><i class="bi bi-list-nested"></i></li>
+            <li><i class="bi bi-gear-fill"></i></li>
         </ul>
     </div>
 </section>
