--- a/src/app/components/index/menu/menu.component.scss
+++ b/src/app/components/index/menu/menu.component.scss
@@ -1,26 +1,69 @@
-section {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-items: center;
-    .container{
-        background-color: red;
-        width: 100%;
-        padding: 20px;
-        border-radius: 40px;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
+.bottom-nav {
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 75%;
+  background: linear-gradient(90deg, var(--white) -100%, var(--primary) 100%);
+  border-radius: 40px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+  padding: 15px 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
 
-        ul {
-            width: 100%;
-            display: flex;
-            justify-content: space-between;
-            li {
-                text-decoration: none;
-                list-style: none;
-            }
-        }
+  ul {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+
+    li {
+      i {
+        font-size: 25px;
+        color: var(--white);
+        cursor: pointer;
+      }
+
+      &:nth-child(2) {
+        margin-right: 40px; // espaço antes do botão
+      }
+
+      &:nth-child(4) {
+        margin-left: 40px; // espaço depois do botão
+      }
     }
+
+    .center-btn {
+      position: absolute;
+      top: -25px;
+      left: 50%;
+      transform: translateX(-50%);
+      background-color: var(--secundary);
+      border: none;
+      width: 70px;
+      height: 70px;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: var(--white);
+      font-size: 30px;
+      cursor: pointer;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
+      transition: background-color 0.3s;
+
+      &:hover {
+        background-color: var(--primary);
+      }
+
+      i {
+        font-size: 35px;
+      }
+    }
+  }
 }
