--- a/src/app/components/index/index.component.scss
+++ b/src/app/components/index/index.component.scss
@@ -20,7 +20,9 @@ section {
         padding: 20px 10px;
 
         box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
-
+        i {
+            font-size: 40px;
+        }
         img {
             height: 60px;
         }
@@ -45,6 +47,7 @@ section {
 
 
     .decks {
-        margin-bottom: 200px;
+    
+        margin: 20px 0 120px 0 ;
     }
 }
