--- a/src/app/components/index/index.component.html
+++ b/src/app/components/index/index.component.html
@@ -11,7 +11,7 @@
         </div>
         <div class="text">
             Ola, Breno <br>
-            <h1>Bem vindo de Volta</h1>
+            <h1>Bem-vindo de Volta</h1>
         </div>
     </header>
     <div class="decks">
