--- a/src/app/components/decks/decks.component.html
+++ b/src/app/components/decks/decks.component.html
@@ -17,13 +17,13 @@
         </div>
   
         <div class="botao">
-          <button (click)="openDialog()">
+          <button (click)="openDialog(item.id)">
             <i class="bi bi-plus-lg"></i>
           </button>
           <button>
             <i class="bi bi-pencil-square"></i>
           </button>
-          <button>
+          <button class="play">
             <i class="bi bi-play-fill"></i>
           </button>
         </div>
@@ -32,6 +32,4 @@
   }
 }
 
-
-<app-colecao />
 
