--- a/src/app/components/decks/decks.component.scss
+++ b/src/app/components/decks/decks.component.scss
@@ -6,6 +6,7 @@ section {
     padding: 5px;
     display: flex;
 
+    justify-content: space-between;
     
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 
@@ -13,6 +14,41 @@ section {
         height: 100%;
         border-radius: 15px;
     }
+
+    .text {
+        padding: 5px;
+        width: 60%;
+        
+    }
+
+    .botao {
+       
+       
+        display: flex;
+        align-items: end;
+        gap: 5px;
+
+        button {
+           
+            font-size: 20px;
+            font-weight: 700;
+            padding: 2px 7px;
+            border: none;
+            border-radius: 10px;
+            color: var(--white);
+            background-color: var(--secundary);
+        }
+
+        .play {
+            i {
+                height: 10px;
+                font-size: 40px;
+                padding: 3px 5px;
+            }
+        }
+    }
+
+
 
     
 }
