--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
 <!-- <app-index /> -->
-
-
-<app-flashcard />
+<!-- <app-login /> -->
+<!-- <app-flashcard /> -->
 <!-- <app-cadastro /> -->
 <router-outlet />
