--- a/src/app/components/decks/decks.component.html
+++ b/src/app/components/decks/decks.component.html
@@ -23,7 +23,7 @@
           <button>
             <i class="bi bi-pencil-square"></i>
           </button>
-          <button class="play">
+          <button class="play" (click)="irParaFlashCards(item.id)">
             <i class="bi bi-play-fill"></i>
           </button>
         </div>
