--- a/src/app/components/index/index.component.html
+++ b/src/app/components/index/index.component.html
@@ -10,7 +10,7 @@
             </div>
         </div>
         <div class="text">
-            Ola, Breno <br>
+            Ola, {{UserInfos.nome.split(' ')[0]}} <br>
             <h1>Bem-vindo de Volta</h1>
         </div>
     </header>
