--- a/src/app/components/index/menu/menu.component.html
+++ b/src/app/components/index/menu/menu.component.html
@@ -1,11 +1,11 @@
 <section>
    <div class="bottom-nav">
         <ul>
-            <li><i class="bi bi-house-fill"></i></li>
-            <li><i class="bi bi-folder-fill"></i></li>
+            <li (click)="Home()"><i class="bi bi-house-fill"></i></li>
+            <li (click)="Deck()"><i class="bi bi-folder-fill"></i></li>
             <button class="center-btn" (click)="openDialog()"><i class="bi bi-plus-lg"></i></button>
-            <li><i class="bi bi-list-nested"></i></li>
-            <li><i class="bi bi-gear-fill"></i></li>
+            <li (click)="Home()"><i class="bi bi-list-nested"></i></li>
+            <li (click)="config()"><i class="bi bi-gear-fill"></i></li>
         </ul>
     </div>
 </section>
