--- a/src/app/components/config/config.component.html
+++ b/src/app/components/config/config.component.html
@@ -1,9 +1,22 @@
-<section>
+<header>
     <div class="container">
-        <div>Editar dados</div>
-        <div>Fale conosco</div>
-        <div>Selecionar idioma</div>
-        <div>mudar tema</div>
-        <div>sair da conta</div>
+        <div class="logo">
+            <img src="imgs/Logo-notext.png" alt="">
+        </div>
+        <div>
+            <i class="bi bi-person-circle"></i>
+        </div>
+    </div>
+</header>
+
+
+<section>
+    <h1><i class="bi bi-arrow-left" (click)="Home()"></i>Configurações</h1>
+    <div class="container">
+        <div><p>Editar dados</p></div>
+        <div><p>Fale conosco</p></div>
+        <div><p>Selecionar idioma</p></div>
+        <div><p>mudar tema</p></div>
+        <div><p>sair da conta</p></div>
     </div>
 </section>
