--- a/src/app/components/edit-dacks/edit-dacks.component.html
+++ b/src/app/components/edit-dacks/edit-dacks.component.html
@@ -1,1 +1,35 @@
-<p>edit-dacks works!</p>
+
+<section class="container">
+
+    <h1><i class="bi bi-arrow-left" (click)="Home()"></i>editar coleção</h1>
+  @if (colecao) {
+    <form (ngSubmit)="salvarColecao()">
+      <label>Nome:</label>
+      <input type="text" [(ngModel)]="colecao.nome" name="nome" />
+
+      <h3>Flashcards</h3>
+
+      @for (item of flashcards; track $index) {
+        <div class="flashcard">
+          <label>Enunciado:</label>
+          <input
+            type="text"
+            [(ngModel)]="item.enunciado"
+            name="enunciado{{$index}}"
+          />
+
+          <label>Resposta:</label>
+          <input
+            type="text"
+            [(ngModel)]="item.resposta"
+            name="resposta{{$index}}"
+          />
+        </div>
+      }
+
+      <button type="submit">💾 Salvar Alterações</button>
+    </form>
+  } @else {
+    <p>Carregando coleção...</p>
+  }
+</section>
