--- a/src/app/components/mydecks/mydecks.component.html
+++ b/src/app/components/mydecks/mydecks.component.html
@@ -1,6 +1,26 @@
-<section>
-    <h1>Seus Decks</h1>
-    <div class="container">
-        <app-decks />
-    </div>
+<section class="mydecks">
+
+    <header>
+            <div class="container">
+                <div class="logo">
+                    <img src="imgs/Logo-notext.png" alt="">
+                </div>
+                <div>
+                    <i class="bi bi-person-circle"></i>
+                </div>
+            </div>
+    </header>
+
+    <section>
+        <h1><i class="bi bi-arrow-left" (click)="Home()"></i>Meus Decks</h1>
+        <div class="container">
+            <div class="Decks">
+                <app-decks />
+            </div>
+        </div>
+    </section>
+
 </section>
+
+<button class="center-btn" (click)="openDialog()"><i class="bi bi-plus-lg"></i></button>
+
