--- a/src/app/components/decks/flashcard/flashcard.component.scss
+++ b/src/app/components/decks/flashcard/flashcard.component.scss
@@ -60,6 +60,20 @@
     align-items: center;
     justify-content: space-between;
     background: var(--white);
+
+    button {
+      background-color:var(--secundary);
+      color: #fff;
+      border: none;
+      padding: 10px;
+      border-radius: 20px;
+      cursor: pointer;
+      transition: 0.3s;
+  
+      &:hover {
+        background-color: var(--primary);
+      }
+    }
   }
  
   .card-back {
