--- a/src/app/components/mydecks/mydecks.component.scss
+++ b/src/app/components/mydecks/mydecks.component.scss
@@ -79,14 +79,18 @@
           flex-direction: column;
           align-items: center;
           justify-content: center;
+          min-height: 100vh;
           width: 100%;
       }
       .Decks {
+
           padding: 20px;
           border-radius: 20px;
           display: flex;
           flex-direction: column;
           align-items: center;
+          width: 90% !important;
+          min-height: 100vh;
           background-color: rgba(0, 0, 0, 0.089);
           
       }
